third_party/move/move-compiler-v2/tests/reference-safety/v1-borrow-tests/borrow_return_mutable_borrow_bad.no-opt.exp

Diagnostics:
error: cannot transfer mutable return value 1 since it is borrowed
  ┌─ tests/reference-safety/v1-borrow-tests/borrow_return_mutable_borrow_bad.move:9:9
  │
7 │         let ref_x_f_g = &ref_x_f.g;
  │                         ---------- field `g` previously borrowed here
8 │
9 │         (ref_x_f, ref_x_f_g)
  │         ^^^^^^^^^^^^^^^^^^^^ transfer attempted here
